# SQLCPP-Homeworks

./: .gitignore  README.md
03/: SQL_script.txt
04/: HW-04_Select_Tasks.sql
05/Task#1/: Client_Manager.cpp  main.cpp
06/task#1/: task#1.vcxproj
HW-02/Task#1/: SQL_script.txt
HW-02/Task#2/: SQL_script.txt
HW-04/: HW-04_Select_Tasks.sql  Music_service_CREATE.sql  Music_service_INSERT.sql  Music_service_SELECT.sql
HW-05/Task#1/: CMakeLists.txt  Client_Manager.cpp  Client_Manager.h  Client_Manager_backup.cpp  Client_Manager_backup.h  main.cpp
HW-06/task#1/: example.cpp  main.cpp  task#1.sln  task#1.vcxproj  task#1.vcxproj.filters
